--- a/playbooks/mailing/web/navbar-brand.html
+++ b/playbooks/mailing/web/navbar-brand.html
@@ -1,5 +1,5 @@
 {% load static from staticfiles %}
-<a class="navbar-brand" href="{% url 'hk_root' %}" title="{{ site_name|title }}">
+<a class="navbar-brand" href="{% url 'hk_root' %}" title="{{ site_name }}">
     <img alt="{{ site_name|title }}" src="{% static 'ovirt_logo.png' %}" style="float: left; margin-right: 30px; height: 60px; padding: 0; margin-top: -20px;" />
-    {{ site_name|title }}
+    {{ site_name }}
 </a>
